improve Stratego listings

--- a/decl-your-lang/commands/languages/Stratego.tex
+++ b/decl-your-lang/commands/languages/Stratego.tex
@@ -2,13 +2,16 @@
 	morekeywords=[1]{all, bagof, constructors, end, extend, fail, id, imports, in,
 	let, module, not, one, overlays, override, prim, rec, rules, script, signature,
 	some, sorts, rules, strategies, stratego, test, thread, where, with, if, then,
-	else, switch, case, otherwise, depends, on}, alsoletter={-}, otherkeywords={<+,+>,?.!,*}, morestring=[b]",
+	else, switch, case, otherwise, depends, on}, 
+	alsoletter={-}, 
+	otherkeywords={<,<+,+>,?.!,*,>,[,$[,|,]}, 
+	%morestring=[b]",
 	morecomment=[l]{//},
 	morecomment=[n]{(*}{*)},
 	morecomment=[n]{/*}{*/},
 	literate=
-		{|[}{{\texttt{|$\!\!$[}}}2%
-		{]|}{{\texttt{]$\!\!$|}}}2%
+		%{|[}{{\texttt{|$\!\!$[}}}2%
+		%{]|}{{\texttt{]$\!\!$|}}}2%
 		{->}{$\rightarrow$~}2%
 		{=>}{$\Rightarrow$~}2,
 	sensitive=true,
