improve ESV listings

--- a/decl-your-lang/commands/languages/ESV.tex
+++ b/decl-your-lang/commands/languages/ESV.tex
@@ -1,5 +1,5 @@
 \lstdefinelanguage{ESV} {
-	morekeywords={module,imports,completions,completion,template,cursor,blank},
+	morekeywords={module,imports,completions,completion,template,cursor,blank,realtime,openeditor,menu,menus,action},
   %morestring=[b]",
 	morecomment=[l]{//},
 	morecomment=[n]{/*}{*/},
