references to early Stratego papers

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -340,6 +340,22 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   number = {P9420},
 }
 
+@inproceedings{LV97,
+  title = {Specification of Rewriting Strategies},
+  author = {Bas Luttik and Eelco Visser},
+  year = {1997},
+  month = {November},
+  tags = {control systems, rule-based, case study, SDF, graph transformation, traversal, transformation language, term rewriting, composition, traversal combinators, graph-rewriting, rules, transformation system, rewriting, rewriting strategies, ASF+SDF, transformation, Stratego},
+  researchr = {http://researchr.org/publication/LV97},
+  cites = {0},
+  citedby = {0},
+  booktitle = {2nd International Workshop on the Theory and Practice of Algebraic Specifications (ASF+SDF 1997)},
+  editor = {M. P. A. Sellink},
+  series = {Electronic Workshops in Computing},
+  address = {Berlin},
+  publisher = {Springer-Verlag},
+}
+
 @inproceedings{ErdwegSV13,
   title = {The State of the Art in Language Workbenches - Conclusions from the Language Workbench Challenge},
   author = {Sebastian Erdweg and Tijs van der Storm and Markus Völter and  Meinte Boersma and Remi Bosman and William R. Cook and Albert Gerritsen and Angelo Hulshout and Steven Kelly and Alex Loh and Gabriël D. P. Konat and Pedro J. Molina and Martin Palatnik and Risto Pohjonen and Eugen Schindler and Klemens Schindler and Riccardo Solmi and Vlad A. Vergu and Eelco Visser and Kevin van der Vlist and Guido Wachsmuth and Jimi van der Woning},
@@ -515,6 +531,20 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   series = {Lecture Notes in Computer Science},
   publisher = {Springer},
   isbn = {3-540-42117-3},
+}
+
+@article{VisserB98,
+  title = {A core language for rewriting},
+  author = {Eelco Visser and Zine-El-Abidine Benaissa},
+  year = {1998},
+  doi = {http://dx.doi.org/10.1016/S1571-0661(05)80027-1},
+  tags = {rule-based, SDF, graph transformation, traversal, transformation language, term rewriting, graph-rewriting, rules, transformation system, abstraction, rewriting, rewriting strategies, ASF+SDF, transformation},
+  researchr = {http://researchr.org/publication/VisserB98},
+  cites = {0},
+  citedby = {0},
+  journal = {Electronic Notes in Theoretical Computer Science},
+  volume = {15},
+  pages = {422-441},
 }
 
 @book{Krishnamurthi2014,
