reference to dynamic rules paper

--- a/decl-your-lang/bibliography.bib
+++ b/decl-your-lang/bibliography.bib
@@ -458,6 +458,21 @@ Bibliography downloaded from http://researchr.org/downloadbibtex/bibliography/me
   advisor = {Paul  Klint},
 }
 
+@article{BravenboerDOV06,
+  title = {Program Transformation with Scoped Dynamic Rewrite Rules},
+  author = {Martin  Bravenboer and Arthur van Dam and Karina Olmos and Eelco Visser},
+  year = {2006},
+  doi = {http://iospress.metapress.com/openurl.asp?genre=article&amp;issn=0169-2968&amp;volume=69&amp;issue=1&amp;spage=123},
+  tags = {programming languages, semantics, rule-based, formal semantics, graph transformation, dynamic rewrite rules, Stratego/XT, transformation language, term rewriting, language design, graph-rewriting, rules, operational semantics, context-aware, access control, rewriting, design, role-based access control, rewriting strategies, transformation, Stratego, program transformation},
+  researchr = {http://researchr.org/publication/BravenboerDOV06},
+  cites = {0},
+  citedby = {4},
+  journal = {Fundamenta Informaticae},
+  volume = {69},
+  number = {1-2},
+  pages = {123-178},
+}
+
 @inproceedings{BravenboerV08,
   title = {Parse Table Composition},
   author = {Martin  Bravenboer and Eelco Visser},
