start working on name binding chapter

--- a/decl-your-lang/names/names.tex
+++ b/decl-your-lang/names/names.tex
@@ -1,5 +1,16 @@
-\chapter{Names}
+\chapter{Name Binding with NaBL}
 \chapterlabel{names}
+
+The
+In this chapter we study the declarative specification of the name binding and
+scoping rules of programming languages. 
+
+\section{References and Declarations}
+
+\Section{Scopes}
+
+
+
 
 \section{Further Reading}
 
@@ -8,6 +19,7 @@
 \cite{NeronTVW15} a theory of name resolution; scope graphs; formal model for
 semantics of NaBL
 
+\cite{WachsmuthKVGV13} task engine
 
 \chapter{Type Constraints}
 \chapterlabel{types}
