--- a/decl-your-lang/body.tex
+++ b/decl-your-lang/body.tex
@@ -14,7 +14,7 @@
 \input{tests/tests}
 \input{syntax/syntax}
 \input{transformation/transformation}
-%\input{names/names}
+\input{names/names}
 %\input{semantics/semantics}
 %\input{extension/extension}
 
