--- a/languages/paplj/paplj.analysis/build.generated.xml
+++ b/languages/paplj/paplj.analysis/build.generated.xml
@@ -50,9 +50,9 @@
     <target name="package-ctree" depends="java.jar" />
 
 	<!-- Initialization -->
-	<available file="${src-gen}/paplj/semantics/strategies/Main.java" property="java.jar.enabled" />
+	<available file="${src-gen}/paplj/analysis/strategies/Main.java" property="java.jar.enabled" />
 	<available file="${pp}/${ppmodule}.str" property="pp.module.enabled" />
-	<condition property="java.jar.import" value="-la paplj.semantics.strategies" else="">
+	<condition property="java.jar.import" value="-la paplj.analysis.strategies" else="">
 		<isset property="java.jar.enabled" />
 	</condition>
 	<condition property="java.jar.classpath" value=":${include}/${strmodule}-java.jar" else="">
@@ -87,7 +87,7 @@
 	<condition property="src-dirs" value="${src-dirs}" else="${src-gen}">
 		<isset property="src-dirs" />
 	</condition>
-	 <condition property="javajar-includes" value="${javajar-includes}" else="paplj/semantics/strategies/">
+	 <condition property="javajar-includes" value="${javajar-includes}" else="paplj/analysis/strategies/">
     <isset property="javajar-includes" />
   </condition>
 
